--- a/docroot/sites/all/themes/SBAC/sass/components/_landing-page.scss
+++ b/docroot/sites/all/themes/SBAC/sass/components/_landing-page.scss
@@ -479,9 +479,9 @@ body.page-sbac{
     }
     .view-sbac-alerts{
       max-width: 1250px;
-      min-width:994px;
       margin:0 auto;
       .ui-accordion{
+        margin-right:30px;
         .ui-accordion-header{
           background: none;
           border: none;
